feat: Integrate Framer for parallax canvas
Adds Framer integration to the Infinite 3D Parallax System. This includes updating dependencies, import maps, and refactoring the `InfiniteCanvas` component to utilize Framer's `Frame` component for better animation control and component composition. The entry point `index.tsx` is updated to pass default image content to the new Framer-based canvas.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <script type="importmap">
-  {
-    "imports": {
-      "react": "https://esm.sh/react@^19.0.0",
-      "react/": "https://esm.sh/react@^19.0.0/",
-      "react-dom/": "https://esm.sh/react-dom@^19.0.0/",
-      "gsap": "https://esm.sh/gsap@^3.12.5",
-      "gsap/": "https://esm.sh/gsap@^3.12.5/"
-    }
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.0.0",
+    "react/": "https://esm.sh/react@^19.0.0/",
+    "react-dom/": "https://esm.sh/react-dom@^19.0.0/",
+    "gsap": "https://esm.sh/gsap@^3.12.5",
+    "gsap/": "https://esm.sh/gsap@^3.12.5/",
+    "framer": "https://aistudiocdn.com/framer@^2.4.1"
   }
+}
 </script>
 <div id="root"></div>
